fix overflow issue

--- a/client/src/assets/custom.css
+++ b/client/src/assets/custom.css
@@ -1,15 +1,21 @@
 .bg-full {
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    filter: brightness(0.3);
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  filter: brightness(0.3);
 }
 
 .jumbotron {
-    background: url('https://images.unsplash.com/photo-1566125882500-87e10f726cdc?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjkwNjAxfQ');
-    background-size: cover;
+  background: url("https://images.unsplash.com/photo-1566125882500-87e10f726cdc?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjkwNjAxfQ");
+  background-size: cover;
+}
+
+@media (max-width: 375px) {
+  .jumbotron > h1 {
+    font-size: 2.5rem;
+  }
 }
